syntax = "proto3";

package user;

import "common/types.proto";

import "google/api/annotations.proto";

option go_package = "github.com/situmorangbastian/skyros/proto/user;user";

message UserFilter {
  repeated string user_ids = 1;
}

message User {
  string id = 1;
  string email = 2;
  string name = 3;
  string address = 4;
  string type = 5;
}

message UsersResponse {
  common.Status status = 1;
  map<string,User> users = 2;
}

message UserLoginRequest {
  string email = 1;
  string password = 2;
}

message UserLoginResponse {
  string access_token = 1;
}

message RegisterUserRequest {
  string user_type = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  string address = 5;
}

message RegisterUserResponse {
  string access_token = 1;
}

service UserService {
  rpc GetUsers(UserFilter) returns (UsersResponse) {}
  rpc UserLogin(UserLoginRequest) returns (UserLoginResponse) {
    option (google.api.http) = {
      post: "/v1/users/login"
      body: "*"
    };
  }
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse) {
    option (google.api.http) = {
      post: "/v1/users/register/{user_type}"
      body: "*"
    };
  }
}
